Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82904

TableView rows are not getting updated immediately with Model rowCount change

XMLWordPrintable

    • bbf5777dc2688fd1f7ef87d8302b5a77c301472d (qt/qtdeclarative/5.15)

      When new rows are added in Model, the tableView's rows property is not getting updated immediately,
      Please refer to the attached sample.

      The debug output shows the difference, the UI is working correctly

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            shmittal Shveta Mittal
            Votes:
            2 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes