TableView: Clarify the rows/columns docs about inserting/removing

Fixes: QTBUG-82904
Change-Id: Ib44122fd0c2e5fc83cfef1368ed4ec0f3b1951af
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>